# Lab-2

./: CMakeLists.txt
res/shaders/: fragment.glsl
src/: camera.cpp  camera.h  main.cpp  mesh.cpp  mesh.h  shaders.cpp  shaders.h  transform.cpp  transform.h  window.cpp  window.h
